added download button

--- a/Before_We_get_Started.Rmd
+++ b/Before_We_get_Started.Rmd
@@ -40,5 +40,22 @@ Im Skriptfenster <code>mean()</code> eingeben und mit dem Cursor direkt daneben 
 Auch wenn dieser Kurs für Einsteiger geeignet ist, werden die Grundlagen der Programmiersprache nicht noch einmal wiederholt. Die meisten Teilnehmer haben schon erste Erfahrungen mit R sammeln können, sollte dies nicht der Fall sein, kann es eventuell Sinn machen, sich ein im Vorhinein ein wenig mit R als Programmiersprache auseinanderzusetzen. Ein guter Anlauf für Tipps, wie man den Einstieg in R gestalten kann, findet sich hier: [Getting Started with R](https://support.rstudio.com/hc/en-us/articles/201141096-Getting-Started-with-R). Eine erste Einführung in detuscher Sprache gibt es hier: [Einführung in R](https://tu-dresden.de/gsw/phil/iso/mes/ressourcen/dateien/prof/lehre/freieS/Dateien/Einfuehrung_R.pdf?lang=de). Die Auseinandersetzung damit ist aber keine Vorraussetzung, um dem Kurs folgen zu können. 
 
 
+# Daten 
+
+```{r eval=T, include=F}
+library(downloadthis)
+
+
+## Link in Github repo
+download_link(
+  link = "https://github.com/pekkasagner/IW-R-Kurs/tree/master/daten_beispiele/Daten-IW-R-Kurs.zip",
+  button_label = "Download pdf file",
+  button_type = "danger",
+  has_icon = TRUE,
+  icon = "fa fa-save",
+  self_contained = FALSE
+)
+
+```
 
 
