--- a/Before_We_get_Started.Rmd
+++ b/Before_We_get_Started.Rmd
@@ -39,12 +39,12 @@ Im Skriptfenster <code>mean()</code> eingeben und mit dem Cursor direkt daneben 
 
 Auch wenn dieser Kurs für Einsteiger geeignet ist, werden die Grundlagen der Programmiersprache nicht noch einmal wiederholt. Die meisten Teilnehmer haben schon erste Erfahrungen mit R sammeln können, sollte dies nicht der Fall sein, kann es eventuell Sinn machen, sich ein im Vorhinein ein wenig mit R als Programmiersprache auseinanderzusetzen. 
 
-Ein guter Anlauf für Tipps, wie man den Einstieg in R gestalten kann, findet sich hier: [Getting Started with R](https://support.rstudio.com/hc/en-us/articles/201141096-Getting-Started-with-R). Eine erste Einführung in deutscher Sprache gibt es hier: [Einführung in R](https://tu-dresden.de/gsw/phil/iso/mes/ressourcen/dateien/prof/lehre/freieS/Dateien/Einfuehrung_R.pdf?lang=de). Die Auseinandersetzung damit ist aber keine Vorraussetzung, um dem Kurs folgen zu können. 
+Ein guter Anlauf für Tipps, wie man den Einstieg in R gestalten kann, findet sich hier: [Getting Started with R](https://support.rstudio.com/hc/en-us/articles/201141096-Getting-Started-with-R). Eine erste Einführung in deutscher Sprache gibt es hier: [Einführung in R](https://tu-dresden.de/gsw/phil/iso/mes/ressourcen/dateien/prof/lehre/freieS/Dateien/Einfuehrung_R.pdf?lang=de). Die Auseinandersetzung damit ist aber keine Voraussetzung, um dem Kurs folgen zu können. 
 
 
 # Daten 
 
-Wir nutzen im Kurs öffentlich zugängliche Daten aus verschiedenen Quellen. Bitte ladet die Daten unten als zip-Datei herunter. Sollte der Button nicht funktionieren, dann findet ihr die Daten auch [hier]("https://github.com/pekkasagner/IW-R-Kurs/raw/master/daten_beispiele/Daten-IW-R-Kurs.zip").
+Wir nutzen im Kurs öffentlich zugängliche Daten aus verschiedenen Quellen. Bitte ladet die Daten unten als zip-Datei herunter. Sollte der Button nicht funktionieren, dann findet ihr die Daten auch [hier](https://github.com/pekkasagner/IW-R-Kurs/blob/master/daten_beispiele/Daten-IW-R-Kurs.zip).
 
 ```{r echo = FALSE, warning=FALSE}
 library(downloadthis)
